--- a/字符串/647. 回文子串.md
+++ b/字符串/647. 回文子串.md
@@ -20,7 +20,7 @@ https://leetcode-cn.com/problems/palindromic-substrings/
 
 注意:
 
-	输入的字符串长度不会超过1000。
+输入的字符串长度不会超过1000。
 
 # 题解
 ### 题解 1 固定回文子串可能的长度
@@ -129,11 +129,13 @@ public:
 ```
 
 # 心得
-1、题解1 固定回文子串可能的长度，速度太慢，执行用时：708 ms, 在所有 C++ 提交中击败了6.94%的用户；
-   题解2 固定原始字符串每个字符，速度稍快，执行用时：8 ms, 在所有 C++ 提交中击败了85.34%的用户；
-   题解3 中心扩展法，                    执行用时：4 ms, 在所有 C++ 提交中击败了98.74%的用户；
-   题解4 动态规划，                      执行用时：56 ms, 在所有 C++ 提交中击败了29.86%的用户。
-2、题解2 用的是中心扩展法，回文子串中心可能是一个字母，或者两个字母，但是这个方法稍显笨拙，需要遍历两遍找中心；
-   题解3 是更为正统的中心扩展发，需要明确的是，在长度为 N 的字符串中，可能的回文串中心位置有 2N-1 个：字母，或两个字母中间。使回文串中心只用一次表示。
-3、注意运算符优先级，"+""-"优先级大于"<<"">>" 
-   
+1、  
+题解1 固定回文子串可能的长度，速度太慢，执行用时：708 ms, 在所有 C++ 提交中击败了6.94%的用户；  
+题解2 固定原始字符串每个字符，速度稍快，执行用时：8 ms, 在所有 C++ 提交中击败了85.34%的用户；  
+题解3 中心扩展法，                    执行用时：4 ms, 在所有 C++ 提交中击败了98.74%的用户；  
+题解4 动态规划，                      执行用时：56 ms, 在所有 C++ 提交中击败了29.86%的用户。  
+2、  
+题解2 用的是中心扩展法，回文子串中心可能是一个字母，或者两个字母，但是这个方法稍显笨拙，需要遍历两遍找中心；  
+题解3 是更为正统的中心扩展发，需要明确的是，在长度为 N 的字符串中，可能的回文串中心位置有 2N-1 个：字母，或两个字母中间。使回文串中心只用一次表示。  
+3、  
+注意运算符优先级，"+""-"优先级大于"<<"">>" 
