--- a/字符串/647. 回文子串.md
+++ b/字符串/647. 回文子串.md
@@ -136,6 +136,14 @@ public:
 题解4 动态规划，                      执行用时：56 ms, 在所有 C++ 提交中击败了29.86%的用户。  
 2、  
 题解2 用的是中心扩展法，回文子串中心可能是一个字母，或者两个字母，但是这个方法稍显笨拙，需要遍历两遍找中心；  
-题解3 是更为正统的中心扩展发，需要明确的是，在长度为 N 的字符串中，可能的回文串中心位置有 2N-1 个：字母，或两个字母中间。使回文串中心只用一次表示。  
+题解3 是更为正统的中心扩展法，需要明确的是，在长度为 N 的字符串中，可能的回文串中心位置有 2N-1 个：字母，或两个字母中间。使回文串中心只用一次表示。  
 3、  
-注意运算符优先级，"+""-"优先级大于"<<"">>" 
+注意运算符优先级，"+""-"优先级大于"<<"">>"  
+4、动态规划解题思路  
+状态：dp[i][j] 表示字符串s在[i,j]区间的子串是否是一个回文串。  
+状态转移方程：当 s[i] == s[j] && (j - i < 2 || dp[i + 1][j - 1]) 时，dp[i][j]=true，否则为false  
+
+这个状态转移方程是什么意思呢？   
+- 当只有一个字符时，比如a自然是一个回文串。  
+- 当有两个字符时，如果是相等的，比如aa，也是一个回文串。  
+- 当有三个及以上字符时，比如ababa这个字符记作串1，把两边的a去掉，也就是bab记作串2，可以看出只要串2是一个回文串，那么左右各多了一个a的串1必定也是回文串。所以当s[i]==s[j]时，自然要看dp[i+1][j-1]是不是一个回文串。  
