--- a/字符串/22. 括号生成（回溯法、dfs+剪枝、dp）.md
+++ b/字符串/22. 括号生成（回溯法、dfs+剪枝、dp）.md
@@ -153,3 +153,6 @@ dp[i] = "(" + dp[j] + ")" + dp[i- j - 1] , j = 0, 1, ..., i - 1**
 2、题解 2 dfs + 剪枝  
 执行用时：8 ms, 在所有 C++ 提交中击败了59.00%的用户
 内存消耗：15 MB, 在所有 C++ 提交中击败了57.56%的用户
+3、题解3 动态规划
+执行用时：8 ms, 在所有 C++ 提交中击败了59.00%的用户
+内存消耗：7.6 MB, 在所有 C++ 提交中击败了95.29%的用户
