--- a/字符串/17. 电话号码的字母组合（回溯法）.md
+++ b/字符串/17. 电话号码的字母组合（回溯法）.md
@@ -15,7 +15,7 @@ https://leetcode-cn.com/problems/letter-combinations-of-a-phone-number/
 
 示例:
 
-输入："23"
+输入："23"  
 输出：["ad", "ae", "af", "bd", "be", "bf", "cd", "ce", "cf"].
 
 说明:
@@ -108,18 +108,18 @@ public:
 ```
 vector<string> ve(n + 1);
 ```
-3、关于题解 2 另一种回溯法（回溯法其实就是dfs的一种）的思路
-这是个排列组合问题，这个排列组合可以用树的形式表示出来；
-当给定了输入字符串"23"，那么整棵树就构建完成了，如下：
-2(a,b,c)————3(d,e,f)
-        ————3(d,e,f)
-        ————3(d,e,f)
-问题转化成了从根节点到空节点一共有多少条路径；
+3、关于题解 2 另一种回溯法（回溯法其实就是dfs的一种）的思路  
+这是个排列组合问题，这个排列组合可以用树的形式表示出来；  
+当给定了输入字符串"23"，那么整棵树就构建完成了，如下：  
+2(a,b,c)————3(d,e,f)  
+&emsp;&emsp;&emsp;————3(d,e,f)  
+&emsp;&emsp;&emsp;————3(d,e,f)  
+问题转化成了从根节点到空节点一共有多少条路径；  
 # AC记录
 1、题解 1 回溯法  
-执行用时：4 ms, 在所有 C++ 提交中击败了48.58%的用户
-内存消耗：11.1 MB, 在所有 C++ 提交中击败了5.12%的用户 
-2、题解 2 另一种回溯法（回溯法其实就是dfs的一种 
-执行用时：8 ms, 在所有 C++ 提交中击败了48.58%的用户
-内存消耗：7.6 MB, 在所有 C++ 提交中击败了5.12%的用户
+执行用时：4 ms, 在所有 C++ 提交中击败了48.58%的用户  
+内存消耗：11.1 MB, 在所有 C++ 提交中击败了5.12%的用户  
+2、题解 2 另一种回溯法（回溯法其实就是dfs的一种）  
+执行用时：8 ms, 在所有 C++ 提交中击败了48.58%的用户  
+内存消耗：7.6 MB, 在所有 C++ 提交中击败了5.12%的用户  
 
